--- a/src/app/tasks/components/all-task-items/all-task-items.component.html
+++ b/src/app/tasks/components/all-task-items/all-task-items.component.html
@@ -1,6 +1,6 @@
 <section>
     <div class="task-card " *ngFor="let task of tasks let i= index">
-      <div class="d-flex justify-content-between mb-2">
+      <div class="d-flex justify-content-between mb-2 flex-md-row flex-column">
         <h3>
           {{ task.title }}
         </h3>
