--- a/src/app/tasks/components/home/home.component.scss
+++ b/src/app/tasks/components/home/home.component.scss
@@ -9,5 +9,9 @@ article {
     width: 90%;
     margin: 0 auto;
     height: 100vh;
+    @media(max-width:767px){
+        flex-direction: column;
+        
+    }
   }
 }
