--- a/src/app/tasks/components/all-task-items/all-task-items.component.scss
+++ b/src/app/tasks/components/all-task-items/all-task-items.component.scss
@@ -6,10 +6,11 @@ section {
   gap: 2rem;
   padding: 3rem;
 }
+
 .task-card {
   background-color: rgb(255, 255, 255);
   box-shadow: 4px 4px 16px rgba(243, 57, 134, 0.1);
-  width: 30%;
+  width: 50%;
   padding: 1rem 1.25rem;
   border-radius: 1rem;
   gap: 2rem;
@@ -30,6 +31,10 @@ section {
     color: white;
     background-color: rgba(179, 31, 80, 0.738);
   }
+  @media(max-width:767px){
+    width: fit-content;
+  }
+
 }
 .task-state {
   display: flex;
