--- a/src/app/tasks/components/task-item/task-item.component.html
+++ b/src/app/tasks/components/task-item/task-item.component.html
@@ -1,6 +1,6 @@
-<section>
-  <div class="task-card">
-    <div class="d-flex justify-content-between mb-2">
+<section >
+  <div class="task-card ">
+    <div class="d-flex justify-content-between mb-2 flex-md-row flex-column">
       <h3>
         {{ task.title }}
       </h3>
