--- a/src/app/tasks/components/task-item/task-item.component.scss
+++ b/src/app/tasks/components/task-item/task-item.component.scss
@@ -1,9 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Almarai:wght@300;400;700;800&display=swap");
-
+section{
+    width: 20rem;
+    margin: 0 auto;
+}
 .task-card {
   background-color: rgb(255, 255, 255);
   box-shadow: 4px 4px 16px rgba(243, 57, 134, 0.1);
-  width: 50%;
+  width: fit-content;
   padding: 1rem 1.25rem;
   border-radius: 1rem;
   display: flex;
